# ultrasound_trackerless_reconstruction_zoo

./: .gitignore  CLAUDE.md  README.md  project_architecture_proposal.md  pyproject.toml  style.md
scripts/: download_tus_rec_2024.py  predict.py  train.py
src/usrec_zoo/: __init__.py  constants.py  types.py
src/usrec_zoo/algorithms/: __init__.py  base.py  registry.py
src/usrec_zoo/algorithms/tusrec_baseline/: __init__.py  algorithm.py  config.py  model.py
src/usrec_zoo/calibration/: __init__.py  calibration.py
src/usrec_zoo/data/: __init__.py  loader.py  splits.py
src/usrec_zoo/evaluation/: __init__.py  ddf.py  metrics.py
src/usrec_zoo/training/: __init__.py  shared_trainer.py
src/usrec_zoo/transforms/: __init__.py  accumulation.py  rigid.py
tests/: __init__.py  test_baseline_equivalence.py  test_exact_match.py  test_verification.py
